--- a/PowerLearnCandidate/PowerLearnCandidate.csproj
+++ b/PowerLearnCandidate/PowerLearnCandidate.csproj
@@ -51,6 +51,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -69,6 +70,9 @@
       <DependentUpon>AnswerVariant.cs</DependentUpon>
     </Compile>
     <Compile Include="Controls\EventArgs.cs" />
+    <Compile Include="Controls\GoogleTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="Controls\Helper.cs" />
     <Compile Include="Controls\NavigationControl.cs">
       <SubType>UserControl</SubType>
