Added possibility to open checker

--- a/PowerLearnCreator/PowerLearnCreator.csproj
+++ b/PowerLearnCreator/PowerLearnCreator.csproj
@@ -195,6 +195,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="CreatorFormLogo.ico" />
+    <None Include="Resources\Check.png" />
     <None Include="Images\Upload.png" />
     <None Include="Images\User.png" />
     <None Include="Images\Close.png" />
