--- a/PowerLearn.Lib/PowerLearn.Lib.csproj
+++ b/PowerLearn.Lib/PowerLearn.Lib.csproj
@@ -12,6 +12,7 @@
     <TargetFrameworkVersion>v4.8</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -42,7 +43,9 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Design" />
     <Reference Include="System.Drawing" />
+    <Reference Include="System.Windows.Forms" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -57,6 +60,9 @@
     <Compile Include="Candidate.cs" />
     <Compile Include="FileServer.cs" />
     <Compile Include="FullName.cs" />
+    <Compile Include="Controls\GoogleTextBox.cs">
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="QuestionType.cs" />
     <Compile Include="Serialization\Helper.cs" />
     <Compile Include="Person.cs" />
